add jwt for swagger
