# back-end/routes.py
@@ -3,16 +3,30 @@ from flask import request, jsonify
 from models.database import db
 from models.match import Match
 from __main__ import app
-from datetime import datetime
+from datetime import datetime, timedelta
+from flask_jwt_extended import create_access_token, get_jwt_identity,jwt_required, get_jwt
+
+
+@app.route('/token', methods=['GET'])
+def get_token():
+    if request.method == 'GET':
+        access_token = create_access_token(
+            identity="admin", 
+            expires_delta=timedelta(minutes=5),
+            additional_claims={'role': request.args.get("role", type=str)},
+        )
+        return jsonify({"jwt": access_token}), 200
 
 
 @app.route('/api/matches', methods=['GET'])
+@jwt_required()
 def get_matches():
     matches = Match.query.all()
     return jsonify([match.serialize() for match in matches]), 200
 
 
 @app.route('/api/matches', methods=['POST'])
+@jwt_required()
 def create_match():
     try:
         # Get data from the request body
@@ -34,6 +48,7 @@ def create_match():
     
 
 @app.route('/api/matches/<int:match_id>', methods=['GET'])
+@jwt_required()
 def get_match_by_id(match_id):
     # Find the Match by ID
     match = Match.query.get(match_id)
@@ -44,6 +59,7 @@ def get_match_by_id(match_id):
     
 
 @app.route('/api/matches/<int:match_id>', methods=['PUT'])
+@jwt_required()
 def update_match(match_id):
     try:
         # Find the Match by ID
@@ -67,6 +83,7 @@ def update_match(match_id):
     
 
 @app.route('/api/matches/<int:match_id>', methods=['DELETE'])
+@jwt_required()
 def delete_match(match_id):
     try:
         # Find the Match by ID
